--- a/deploy.yml
+++ b/deploy.yml
@@ -21,7 +21,7 @@ spec:
        - containerPort: 3000
        env:
        - name: MONGODB_URI
-         value: "mongodb://localhost:27017/parceltracker"
+         value: "mongodb://mongodb-service:27017/libraryDB"
        - name: PORT
          value: "3000"
        - name: HOST
